Fix z-index issue between toolbar and layout builder bar

--- a/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-layout-builder.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-layout-builder.scss
@@ -14,10 +14,14 @@
   bottom: 64px !important;
 }
 body.toolbar-horizontal .glb-toolbar,
-body.toolbar-horizontal #toolbar-administration,
 .layout-builder-ipe-actions {
   // Make this higher than the z-index of everything else.
   z-index: 1002 !important;
+}
+
+body.toolbar-horizontal #toolbar-administration {
+  // But make the toolbar menu have an even higher z-index.
+  z-index: 1003 !important;
 }
 
 #layout-builder-modal .cd-alert {
